deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-test-k8s
  labels:
    app: api-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-test
  template:
    metadata:
      labels:
        app: api-test
    spec:
      containers:
      - name: api-test
        image: asia.gcr.io/plated-mesh-380214/api-test:v1.0
        ports:
        - containerPort: 80
