service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-test-k8s
spec:
  selector:
    app: api-test
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
