ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-test
spec:
  rules:
  - host: test.addnewdomain.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-test-k8s
            port:
              number: 80
